--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <div id="root"></div>
         <script src="/index.jsx" type="module"></script>
         <script type="type/babel" src="index.js"></script>
+        <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     </body>
 </html>
